# grid-system-calculator

./: README.md  constants.py  grid-calculator.py  grid_calculator.ipynb  pyproject.toml
