[tool.poetry]
name = "grid-system-calculator"
version = "0.1.0"
description = "International Typographical Style Grid System calculator"
authors = ["neilpanchal <neilpanchal@users.noreply.github.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
